src/OpenCvSharpExtern/geometry.h

CVAPI(ExceptionStatus) geometry_fitEllipse_Point(
    cv::Point *points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipse(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipse_Point2f(
    cv::Point2f *points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipse(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseAMS_InputArray(const interop::InputArrayProxy* points, interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        *returnValue = c(cv::fitEllipseAMS(InProxy(*points)));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseAMS_Point(
    cv::Point* points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipseAMS(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseAMS_Point2f(
    cv::Point2f* points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipseAMS(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseDirect_InputArray(const interop::InputArrayProxy* points, interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        *returnValue = c(cv::fitEllipseDirect(InProxy(*points)));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseDirect_Point(
    cv::Point* points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipseDirect(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitEllipseDirect_Point2f(
    cv::Point2f* points,
    int pointsLength,
    interop::RotatedRect* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
        *returnValue = c(cv::fitEllipseDirect(pointsVec));
    });
}
CVAPI(ExceptionStatus) geometry_fitLine_InputArray(
    const interop::InputArrayProxy* points,
    const interop::OutputArrayProxy* line,
    int distType,
    double param,
    double reps,
    double aeps)
{
    return cvTry([&] {
        cv::fitLine(InProxy(*points), OutProxy(*line), distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) geometry_fitLine_Point(
    cv::Point *points,
    int pointsLength,
    float *line,
    int distType,
    double param,
    double reps,
    double aeps)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point> pointsVec(pointsLength, 1, points);
        cv::Mat_<float> lineVec(4, 1, line);
        cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) geometry_fitLine_Point2f(
    cv::Point2f *points,
    int pointsLength,
    float *line,
    int distType,
    double param,
    double reps,
    double aeps)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point2f> pointsVec(pointsLength, 1, points);
        cv::Mat_<float> lineVec(4, 1, line);
        cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) geometry_fitLine_Point3i(
    cv::Point3i *points,
    int pointsLength,
    float *line,
    int distType,
    double param,
    double reps,
    double aeps)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point3i> pointsVec(pointsLength, 1, points);
        cv::Mat_<float> lineVec(6, 1, line);
        cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) geometry_fitLine_Point3f(
    cv::Point3f *points,
    int pointsLength,
    float *line,
    int distType,
    double param,
    double reps,
    double aeps)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point3f> pointsVec(pointsLength, 1, points);
        cv::Mat_<float> lineVec(6, 1, line);
        cv::fitLine(pointsVec, lineVec, distType, param, reps, aeps);
    });
}
CVAPI(ExceptionStatus) geometry_pointPolygonTest_InputArray(
    const interop::InputArrayProxy* contour,
    interop::Point2f pt,
    int measureDist,
    double *returnValue)
{
    return cvTry([&] {
        *returnValue = cv::pointPolygonTest(InProxy(*contour), cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) geometry_pointPolygonTest_Point(
    cv::Point *contour,
    int contourLength,
    interop::Point2f pt,
    int measureDist,
    double* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point> contourVec(contourLength, 1, contour);
        *returnValue = cv::pointPolygonTest(contourVec, cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) geometry_pointPolygonTest_Point2f(
    cv::Point2f *contour,
    int contourLength,
    interop::Point2f pt,
    int measureDist,
    double* returnValue)
{
    return cvTry([&] {
        const cv::Mat_<cv::Point2f> contourVec(contourLength, 1, contour);
        *returnValue = cv::pointPolygonTest(contourVec, cpp(pt), measureDist != 0);
    });
}
CVAPI(ExceptionStatus) geometry_rotatedRectangleIntersection_OutputArray(
    interop::RotatedRect rect1,
    interop::RotatedRect rect2,
    const interop::OutputArrayProxy* intersectingRegion,
    int* returnValue)
{
    return cvTry([&] {
        *returnValue = cv::rotatedRectangleIntersection(cpp(rect1), cpp(rect2), OutProxy(*intersectingRegion));
    });
}
CVAPI(ExceptionStatus) geometry_rotatedRectangleIntersection_vector(
    interop::RotatedRect rect1,
    interop::RotatedRect rect2,
    std::vector<cv::Point2f> *intersectingRegion,
    int* returnValue)
{
    return cvTry([&] {
        *returnValue = cv::rotatedRectangleIntersection(cpp(rect1), cpp(rect2), *intersectingRegion);
    });
}